--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 DATABASE_URL="mongodb+srv://nyeinminhtetdev:VoHgf6DZFLcfkUsk@netflixclone.ypwxyjk.mongodb.net/netflixclone"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
-NEXTAUTH_SECRET=122a918b879a0d7e331c0795f435d084
+NEXTAUTH_SECRET="NEXTAUTH-SECRET"
 
 GOOGLE_CLIENT_ID=651001757921-iq0s0evobpf9vphffma68lc0ujqq32ab.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
