--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 DATABASE_URL="mongodb+srv://nyeinminhtetdev:VoHgf6DZFLcfkUsk@netflixclone.ypwxyjk.mongodb.net/netflixclone"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXTAUTH-SECRET"
-
+NEXTAUTH_URL=http://localhost:3000
 GOOGLE_CLIENT_ID=651001757921-iq0s0evobpf9vphffma68lc0ujqq32ab.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 GITHUB_CLIENT_ID=59db146deb08444166bd
